# nbs-qr-bot

./: .gitignore  Cargo.toml  claude-progress.txt  feature_list.json  init.ps1  init.sh
src/: main.rs  parser.rs  qr.rs
